# lib_hdfeos2

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindEOS.cmake.in  HDF4UseFortran.cmake  HE2_config.h.cmakein  configure.cmake  find_anyproject.cmake  hdfeos-config-version.cmake.in  hdfeos-config.cmake.build.in  hdfeos-config.cmake.install.in  util.cmake
doc/: AUTOCONF_INSTALL  Compile_WIN.readme.txt  Install_HDFEOS_WIN.readme.txt  README
gctp/: CMakeLists.txt  for_init.c  gctp_init.h  inv_init.c  isin.h
samples/: CMakeLists.txt  ReadDimscaleGrid.c  ReadDimscaleSwath.c  RunSamples  WriteAllDimscaleGrid.c  WriteAllDimscaleSwath.c  WriteDimscaleGrid.c  WriteDimscaleSwath.c  appendfield.f  definefields.f  definegdflds.f  definelevels.f  inquiregrid.f  inquireswath.f  readdimscalegrid.f  readdimscaleswath.f  readfields.f  readgdflds.f  readlevels.f  setupgrid.f  setuppoint.f  setupswath.f  subsetgrid.f  subsetpoint.f  subsetswath.f  updatelevels.f  writedimscalegrid.f  writedimscaleswath.f  writefields.f  writegdflds.f  writelevels.f
src/: CMakeLists.txt  GDapi.c  HdfEosDef.h
